# C-exercises

./: .gitignore  .gitmodules  README.md
Algoritmos & Estruturas de Dados I/Exercícios/1_TAD/: input_validate.h  integer_set.c  integer_set.h  main.c
Algoritmos & Estruturas de Dados I/Exercícios/4_Algoritmos_de_Ordenação/: main.c
Algoritmos & Estruturas de Dados II/Exercícios/01/: main.c
Algoritmos & Estruturas de Dados II/Exercícios/03/: binary_tree.c  binary_tree.h  libC.py  main.c  main.py  queue.h
Computação Gráfica/CubeTexture/: README.md
Computação Gráfica/CubeTexture/src/: main.c
Computação Gráfica/MeshTexture/src/: main.c
Computação Gráfica/Sun/scripts/: CMakeLists.txt
Computação Gráfica/Sun/src/: main.c
Computação Gráfica/Textures/src/: main.c
Concurrent/Hello/: main.c
Concurrent/OpenMP/: 00_basic_thread.c  01_thread_for.c  02_multiple_tasks_threads.c  03_thread_timing.c  04_parallel_search.c  05_pi.c  06_arithmetic_medium.c  run.sh
Concurrent/OpenMP/ex03/: 01.c  02.c  03.c  04.c  05.c  06.c  generator.c  generator.h  run.sh  utils.c  utils.h
Concurrent/OpenMP/ex07/: README.md  benchmark.c  benchmark.h  generator.h  main.c  run.sh
Concurrent/Pthread/: main.c  run.sh
Concurrent/mpi/: 00_hello.c  01_intro.c  02_broadcast.c  03_pi.c  04_reduce.c  mpi.c.template  run.sh
Introdução à Programação/Exercícios/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.1.c  8.2.c  8.3.c  8.4.c  9.1.c  9.2.c  9.3.c  9.3.h
The C Programming Language Book/Chapter1/: 10_characters_count.c  11_characters_count_ii.c  12_lines_count.c  13_especial_characters_count.c  14_input_copying_trailing_spaces.c  15_meta_copying.c  16_text_counting.c  17_copy_words_in_newlines.c  18_digits_counting.c  19_words_histogram.c  1_hello_world.c  20_chars_histogram.c  21_function_power.c  22_conversion_table_v.c  23_longest_line.c  24_longest_line_revised.c  25_print_longer_than80.c  26_trim_input.c  27_reverse_input.c  28_longest_line_specialized.c  2_conversion_table_i.c  30_entab.c  31_fold.c  3_conversion_table_ii.c  4_conversion_table_iii.c  6_file_copying_i.c  7_file_copying_ii.c  8_verify_eof.c  9_print_eof.c
playground/cmake/3_src/: CMakeLists.txt  main.c
playground/cmake/3_src/src/: hello.c
playground/cmake/4_lib/: CMakeLists.txt
playground/cmake/4_lib/src/: world.c
playground/cmake/6_ready_lib/: CMakeLists.txt  main.cpp
playground/cmake/6_ready_lib/lib/: hello.h
playground/cmake/6_ready_lib/src/: world.h
playground/crossover/: c_world.c  c_world.h  python_world.py
playground/hello_world/: README.md  ex1.c  ex2.c  main.c
playground/scons/: README.md
playground/tests/: compare_execution_time.c
playground/utils/: session_message.c
(+434 files in other folders)
